main/default/objects/Contact/fields/Contact_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_External_ID__c</fullName>
    <description>external iAve ID</description>
    <externalId>true</externalId>
    <label>Contact External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>