main/default/objects/Contact/fields/InActive__c.field-meta.xml
<CustomField>
    <fullName>InActive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field when a contact leaves the associated account</inlineHelpText>
    <label>InActive</label>
    <type>Checkbox</type>
</CustomField>