main/default/objects/Contact/fields/Workshop_Invite_Date__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Invite_Date__c</fullName>
    <label>Workshop Invite Date</label>
    <type>Date</type>
</CustomField>