main/default/objects/Contact/fields/Workshop_Level__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Level__c</fullName>
    <label>Workshop Level</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>